--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,7 @@
                 <input type="text" name="blog-content id="blog-content" />        
               </div>  
               <button id="submit">Submit</button>
-              <script src="./Assets/js/form.js"></script>       
+              <script src="./Assets/js/form.js"></script>  
+              <a href="Blog-Trees.html"></a>     
 </body>
 </html>
