--- a/Blog-Trees.html
+++ b/Blog-Trees.html
@@ -6,6 +6,12 @@
     <title>This is my blog page</title>
 </head>
 <body>
-    <h2>blog page</h2>
+    <h2>Blog Tree page</h2>
+    <div>User Name:</div><br><span id="userName"></span></div>
+    <div>Blog Title:</div><br><span id="blogTitle"></span></div>
+    <div>Blog Content:</div><br><span id="blogContent"></span></div>
+
 </body>
+<script src="./Assets/js/blog.js">
+    </script>
 </html>
