working on a new function for empty form error

--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     </nav>
 </nav></h1>
 <body>
-    
+    <div id="error"></div>
     <div class="clearfix">
         <div class="card">
           <h1>Blog Tree Entry</h1>
