added textbox for blog content on blog page with css

--- a/Blog-Trees.html
+++ b/Blog-Trees.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my blog page</title>
+    <link rel="stylesheet" href="./Assets/blog.css" />
 </head>
 <body>
     <h2>Blog Tree page</h2>
     <div>User Name:</div><br><span id="userName"></span></div>
     <div>Blog Title:</div><br><span id="blogTitle"></span></div>
-    <div>Blog Content:</div><br><span id="blogContent"></span></div>
+    <div>Blog Content:
+    <input type="text" id="blogContent" name="blogContent"></div>
 
 </body>
 <script src="./Assets/js/blog.js">
