added toggle dark/light mode button to top right corner of blog page

--- a/Blog-Trees.html
+++ b/Blog-Trees.html
@@ -6,6 +6,19 @@
     <title>This is my blog page</title>
     <link rel="stylesheet" href="./Assets/blog.css" />
 </head>
+<header>
+    <div class="row toggle">
+        <div class="col">
+          <p>DARK MODE</p>
+        </div>
+        <label class="switch col">
+          <input type="checkbox" id="theme-switcher">
+          <span class="slider round"></span>
+        </label>
+        <div class="col">
+          <p>LIGHT MODE</p>
+        </div>
+</header>
 <body>
     <h2>Blog Tree page</h2>
     <div>User Name:</div><br><span id="userName"></span></div>
