--- a/Blog-Trees.html
+++ b/Blog-Trees.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my blog page</title>
     <link rel="stylesheet" href="./Assets/blog.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <header>
-    <div class="row toggle">
-        <div class="col">
-          <p>DARK MODE</p>
-        </div>
-        <label class="switch col">
-          <input type="checkbox" id="theme-switcher">
-          <span class="slider round"></span>
-        </label>
-        <div class="col">
-          <p>LIGHT MODE</p>
-        </div>
+    <div>
+   <input type="checkbox" class="checkbox" id="checkbox">
+   <label for="checkbox" class="label">
+   <i class="fas fa-moon"></i>
+   <i class="fas fa-sun"></i>
+<div class="ball"></div></label>
+
+</div>
+
+        
 </header>
 <body>
     <h2>Blog Tree page</h2>
