form submit displays values of inputs

--- a/Blog-Trees.html
+++ b/Blog-Trees.html
@@ -20,13 +20,14 @@
         
 </header>
 <body>
-    <h2>Blog Tree page</h2>
-    <div>User Name:</div><br><span id="userName"></span></div>
-    <div>Blog Title:</div><br><span id="blogTitle"></span></div>
-    <div>Blog Content:
-    <input type="text" id="blogContent" name="blogContent"></div>
-
+<h1>Blog Tree Entries</h1>
+<div>Username:<br><span id="user-name"></span></div>
+<div>Blogtitle:<br><span id="blog-title"></span></div>
+<div>Blogcontent:<br><span id="blog-content"></span></div>
 </body>
+<script src="/Blog-Trees/Assets/js/logic.js">
+</script>
 <script src="./Assets/js/blog.js">
     </script>
+   
 </html>
