--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="clearfix">
         <div class="card">
-          <h1>Blog Tree Entry</h1>
+          <h1><p>Blog Tree Entry</p></h1>
          
          
           <form id="form">
