updated css and added back button to blog page

--- a/Blog-Trees.html
+++ b/Blog-Trees.html
@@ -13,8 +13,12 @@
    <label for="checkbox" class="label">
    <i class="fas fa-moon"></i>
    <i class="fas fa-sun"></i>
-<div class="ball"></div></label>
-
+<div class="ball"></div></label></div>
+<div class="box">
+    <div class ="box">
+        <input type="button" onclick="window.location.href='Index1.html';" value="w3docs" />
+        
+    </div>
 </div>
 
         
