--- a/Index1.html
+++ b/Index1.html
@@ -14,17 +14,17 @@
 <body>
     <div class="clearfix">
         <div class="card">
-          <h1><p>Blog Tree Entry</p></h1>
+          <h1><p>Blog Tree Poetry</p></h1>
          
          
           <form id="form">
             <div class="input-group">
                 <label for="userName">User Name</label>
                 <input type="text" name="userName" id="userName" />
-            <div class="input-group">
+                <div class="input-group">
                 <label for="blogTitle">Blog Title</label>
                 <input type="text" name="blogTitle" id="blogTitle" />
-            <div class="input-group">
+                <div class="input-group">
                 <label for="blogContent">Blog Content</label>
                 <input type="text" name="blogContent" id="blogContent" />         
             <button formaction="Blog-Trees.html" type="submit"  id="submit" >Submit</button>
