created back button

--- a/Blog-Trees.html
+++ b/Blog-Trees.html
@@ -9,29 +9,28 @@
 </head>
 <header>
     <div>
-   <input type="checkbox" class="checkbox" id="checkbox">
-   <label for="checkbox" class="label">
-   <i class="fas fa-moon"></i>
-   <i class="fas fa-sun"></i>
-<div class="ball"></div></label></div>
-<div class="box">
-    <div class ="box">
-        <input type="button" onclick="window.location.href='Index1.html';" value="w3docs" />
-        
+        <input type="checkbox" class="checkbox" id="checkbox">
+        <label for="checkbox" class="label">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball"></div>
+        </label>
     </div>
-</div>
-
-        
+    <div class="box">
+        <div class="box">
+            <input type="button" onclick="window.location.href='Index1.html'" value="Back" />
+        </div>
+    </div>
 </header>
 <body>
-<h1>Blog Tree Entries</h1>
-<div>Username:<br><span id="user-name"></span></div>
-<div>Blogtitle:<br><span id="blog-title"></span></div>
-<div>Blogcontent:<br><span id="blog-content"></span></div>
+    <h1>Blog Tree Entries</h1>
+    <div>Username:<br><span id="user-name"></span></div>
+    <div>Blog title:<br><span id="blog-title"></span></div>
+    <div>Blog content:<br><span class="blog-content" id="blog-content"></span></div>
+    <footer>
+        <a href="#">My Portfolio</a>
+    </footer>
 </body>
-<script src="/Blog-Trees/Assets/js/logic.js">
-</script>
-<script src="./Assets/js/blog.js">
-    </script>
-   
+<script src="/Blog-Trees/Assets/js/logic.js"></script>
+<script src="./Assets/js/blog.js"></script>
 </html>
