changed the page title for the page that displays the posts

--- a/blog-posts.html
+++ b/blog-posts.html
@@ -18,12 +18,15 @@
     </div>
     <div class="box">
         <div class="box">
-            <input type="button" onclick="window.location.href='Index1.html'" value="Back" />
+            <input type="button" onclick="window.location.href='./index.html' value="Back" />
         </div>
     </div>
 </header>
 <body>
     <h1>Blog Tree Entries</h1>
+    <div class="blogimg">
+        <img src="./pics/socotra milky way.jpg">
+    </div>
     <div>Username:<br><span id="user-name"></span></div>
     <div>Blog title:<br><span id="blog-title"></span></div>
     <div>Blog content:<br><span class="blog-content" id="blog-content"></span></div>
