--- a/blog-posts.html
+++ b/blog-posts.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my blog page</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <header class="bg-gray-800 text-white py-4">
     <div class="flex justify-between items-center px-4">
         <label for="toggle" class="flex items-center cursor-pointer">
@@ -19,21 +23,23 @@
         </label>
         <div class="box">
             <div class="box">
-                <input type="button" onclick="window.location.href='./index.html'" value="Back" class="bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded">
+                <input type="button" onclick="window.location.href='./index.html'" value="Back"
+                    class="bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded">
             </div>
         </div>
     </div>
 </header>
 
-<body class="bg-gray-100">
+<body class="light-mode bg-gray-100 dark:bg-gray-800 dark:text-white transition-colors duration-500">
     <h1 class="text-3xl text-center font-bold mt-8">Blog Tree Entries</h1>
-    <div class="mx-auto mt-8 bg-white rounded-lg shadow-lg max-w-2xl p-6">
+    <div class="mx-auto mt-8 bg-white dark:bg-gray-700 rounded-lg shadow-lg max-w-2xl p-6">
         <div class="blogimg mb-4">
             <img src="./pics/socotra milky way.jpg" class="w-full rounded-lg">
         </div>
         <div class="mb-4">Username: <span id="user-name" class="font-bold">JohnDoe</span></div>
         <div class="mb-4">Poem Title: <span id="blog-title" class="text-xl font-bold">Nature's Beauty</span></div>
-        <div class="mb-4">Content: <span class="blog-content" id="blog-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span></div>
+        <div class="mb-4">Content: <span class="blog-content" id="blog-content">Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span></div>
     </div>
     <footer class="text-center mt-8">
         <a href="#" class="text-gray-500 hover:text-gray-700 text-sm">My Portfolio</a>
@@ -41,4 +47,6 @@
     <script src="./Assets/js/logic.js"></script>
     <script src="./Assets/js/blog.js"></script>
 </body>
+
+
 </html>
