--- a/blog-posts.html
+++ b/blog-posts.html
@@ -36,10 +36,9 @@
         <div class="blogimg mb-4">
             <img src="./pics/socotra milky way.jpg" class="w-full rounded-lg">
         </div>
-        <div class="mb-4">Username: <span id="user-name" class="font-bold">JohnDoe</span></div>
-        <div class="mb-4">Poem Title: <span id="blog-title" class="text-xl font-bold">Nature's Beauty</span></div>
-        <div class="mb-4">Content: <span class="blog-content" id="blog-content">Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span></div>
+        <div class="mb-4">Username: <span id="user-name" class="font-bold"></span></div>
+        <div class="mb-4">Poem Title: <span id="blog-title" class="text-xl font-bold"></span></div>
+        <div class="mb-4">Content: <span class="blog-content" id="blog-content"></span></div>
     </div>
     <footer class="text-center mt-8">
         <a href="#" class="text-gray-500 hover:text-gray-700 text-sm">My Portfolio</a>
